# kiro-ai-dlc-demo

./: .gitignore  CODE_GENERATION_COMPLETE.md  OVERVIEW.md  README.md  cloudspend.db  main.py  pyproject.toml  requirements.txt
.kiro/steering/: aws-services-priority.md
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/api-service/code/: generation-summary.md
aidlc-docs/construction/api-service/nfr-design/: logical-components.md  nfr-design-patterns.md
aidlc-docs/construction/api-service/nfr-requirements/: nfr-requirements.md  tech-stack-decisions.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  test-instructions.md
aidlc-docs/construction/cost-analytics-service/code/: generation-summary.md
aidlc-docs/construction/cost-analytics-service/functional-design/: business-logic-model.md  business-rules.md  domain-entities.md
aidlc-docs/construction/cost-analytics-service/infrastructure-design/: database-schema.md  deployment-configuration.md
aidlc-docs/construction/cost-analytics-service/nfr-design/: logical-components.md  nfr-design-patterns.md
aidlc-docs/construction/cost-analytics-service/nfr-requirements/: nfr-requirements.md  tech-stack-decisions.md
aidlc-docs/construction/plans/: api-service-code-generation-plan.md  api-service-nfr-design-plan.md  api-service-nfr-requirements-plan.md  cost-analytics-service-code-generation-plan.md  cost-analytics-service-functional-design-plan.md  cost-analytics-service-nfr-design-plan.md  cost-analytics-service-nfr-requirements-plan.md
aidlc-docs/inception/plans/: execution-plan.md
aidlc-docs/inception/requirements/: requirement-verification-questions.md  requirements.md
app/: __init__.py  database.py  models.py  seed.py
app/api/: endpoints.py
docs/: API.md  README.md
tests/: test_api.py  test_api_pbt.py
