[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "blog-posts-api"
version = "1.0.0"
description = "A minimal REST API for managing blog posts with tag support"
authors = [{name = "Developer", email = "dev@example.com"}]
readme = "docs/README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0",
    "sqlmodel>=0.0.14",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "hypothesis>=6.82.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/example/blog-posts-api"
Documentation = "https://github.com/example/blog-posts-api#readme"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
